@@ -1,10 +1,7 @@
 package com.smartpharma.entity;
 
 import jakarta.persistence.*;
-import lombok.AllArgsConstructor;
-import lombok.Builder;
-import lombok.Data;
-import lombok.NoArgsConstructor;
+import lombok.*;
 import org.hibernate.annotations.CreationTimestamp;
 import org.hibernate.annotations.UpdateTimestamp;
 import org.springframework.security.core.GrantedAuthority;
@@ -13,91 +10,82 @@ import org.springframework.security.core.userdetails.UserDetails;
 
 import java.time.LocalDateTime;
 import java.util.Collection;
-import java.util.List;
+import java.util.Collections;
 
 @Entity
-@Table(name = "users", schema = "smartpharma")
-@Data
-@Builder
-@NoArgsConstructor
-@AllArgsConstructor
+@Table(name = "users")
+@Data @Builder @NoArgsConstructor @AllArgsConstructor
 public class User implements UserDetails {
 
-    @Id
-    @GeneratedValue(strategy = GenerationType.IDENTITY)
+    @Id @GeneratedValue(strategy = GenerationType.IDENTITY)
     private Long id;
-
-    @Column(nullable = false, unique = true, length = 50)
-    private String username;
-
-    @Column(nullable = false)
-    private String password;
-
-    @Column(nullable = false, length = 100)
-    private String fullName;
-
-    @Column(unique = true, length = 50)
-    private String email;
-
-    @Column(length = 20)
-    private String phone;
-
-    @Enumerated(EnumType.STRING)
-    @Column(nullable = false)
-    @Builder.Default
-    private UserRole role = UserRole.PHARMACIST;
 
     @ManyToOne(fetch = FetchType.LAZY)
     @JoinColumn(name = "pharmacy_id", nullable = false)
     private Pharmacy pharmacy;
 
+    @Column(nullable = false, unique = true, length = 100)
+    private String username;
+
     @Column(nullable = false)
-    @Builder.Default
+    private String password;
+
+    @Column(length = 255)
+    private String fullName;
+
+    @Column(length = 100)
+    private String email;
+
+    @Column(length = 50)
+    private String phone;
+
+    @Column(length = 255)
+    private String profileImageUrl;
+
+    @Column(length = 100)
+    private String jobTitle;
+
+    @Column(length = 50)
+    private String department;
+
+    @Column(length = 255)
+    private String address;
+
+    @Column(length = 50)
+    private String city;
+
+    @Column(length = 50)
+    private String country;
+
+    @Column(columnDefinition = "TEXT")
+    private String bio;
+
+    @Enumerated(EnumType.STRING) @Column(length = 20)
+    private Gender gender;
+
+    @Enumerated(EnumType.STRING) @Column(nullable = false, length = 20)
+    private UserRole role = UserRole.PHARMACIST;
+
+    @Column(nullable = false)
     private Boolean isActive = true;
 
-    @Column(name = "last_login_at")
     private LocalDateTime lastLoginAt;
+    private LocalDateTime deletedAt;
 
-    @CreationTimestamp
-    @Column(name = "created_at", updatable = false)
+    @CreationTimestamp @Column(updatable = false)
     private LocalDateTime createdAt;
 
     @UpdateTimestamp
-    @Column(name = "updated_at")
     private LocalDateTime updatedAt;
 
-    @Column(name = "deleted_at")
-    private LocalDateTime deletedAt;
-
-    @Override
-    public Collection<? extends GrantedAuthority> getAuthorities() {
-        return List.of(new SimpleGrantedAuthority("ROLE_" + role.name()));
+    @Override public Collection<? extends GrantedAuthority> getAuthorities() {
+        return Collections.singletonList(new SimpleGrantedAuthority("ROLE_" + role.name()));
     }
+    @Override public boolean isAccountNonExpired() { return true; }
+    @Override public boolean isAccountNonLocked() { return isActive != null && isActive; }
+    @Override public boolean isCredentialsNonExpired() { return true; }
+    @Override public boolean isEnabled() { return isActive != null && isActive; }
 
-    @Override
-    public boolean isAccountNonExpired() {
-        return true;
-    }
-
-    @Override
-    public boolean isAccountNonLocked() {
-        return true;
-    }
-
-    @Override
-    public boolean isCredentialsNonExpired() {
-        return true;
-    }
-
-    @Override
-    public boolean isEnabled() {
-        return isActive;
-    }
-
-    public enum UserRole {
-        ADMIN,
-        PHARMACIST,
-        MANAGER,
-        VIEWER
-    }
+    public enum UserRole { ADMIN, PHARMACIST, MANAGER, VIEWER }
+    public enum Gender { MALE, FEMALE, OTHER }
 }
